--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -22,6 +22,8 @@
       padding: 10px 15px;
       color: #000;
       text-decoration: none;
+      text-transform: uppercase;
+      cursor: pointer;
     }
   }
 }
