implemented firebase utils, store auth users into firestore

--- a/src/components/SignUp/style.scss
+++ b/src/components/SignUp/style.scss
@@ -1,9 +1,9 @@
-.sign-in{
-  flex: 0 0 50%;
+.sign-up {
   display: flex;
   flex-direction: column;
+  flex: 0 0 45%;
 
-  .title{
+  .title {
     margin: 10px 0;
   }
 
