--- a/src/pages/signInSignUpPage/style.scss
+++ b/src/pages/signInSignUpPage/style.scss
@@ -1,9 +1,11 @@
 
-.homepage {
+.sign-in-and-sign-up {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 20px 80px;
+  // flex-direction: column;
+  // align-items: center;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding: 20px;
 }
   
 .directory-menu {
