--- a/src/components/CustomButton/style.scss
+++ b/src/components/CustomButton/style.scss
@@ -30,5 +30,18 @@
         border: none;
       }
     }
+
+    &.inverted{
+      background-color: #fff;
+      color: #000;
+      border: none;
+
+      &:hover{
+        cursor: pointer;
+        background-color: #000;
+        color: #fff;
+        border: none;
+      }
+    }
   }
   
